Try different fix as text is not aligned correctly on Github Pages

--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -124,6 +124,8 @@
   .archive__item-teaser-hover-link {
     height: 100%;
     width: 100%;
+    top: 50%;
+    left: 50%;
     display: block;
     text-align: center;
     text-decoration: none;
